<?xml version="1.0" encoding="utf-8"?>
<resources>
     
    <!--  Apps Titles -->
	<string name="app_name">LSViewer</string>
	<string name="app_Login">LSViewer - Login</string>
	<string name="app_Home">LSViewer - Home</string>
	<string name="app_Maps">LSViewer - Maps</string>
	<string name="app_Images">LSViewer - Images</string>
	<string name="app_ImageSensors">LSViewer - Sensors Image</string>
	<string name="app_NetList">LSViewer - Net List </string>
	<string name="app_QRCode">LSViewer - QRCode </string>
	<string name="app_SensorList">LSViewer - Sensor List</string>
	<string name="app_SensorInfo">LSViewer - Sensor Info</string>
	<string name="app_Help">LSViewer - Help</string>
	<string name="app_Graph">LSViewer - Graph</string>
	
	<!--  Login Screen -->
    <string name="user">User</string>
    <string name="password">Password</string>    
    <string name="btnLogin">Sign in</string>
    <string name="cbRemember">Remember password</string>

    <!--  Home Screen -->    
    <string name="btnList">List</string>
    <string name="btnMap">Map</string>
    <string name="btnQRCode">QRCode</string>
    <string name="btnHelp">Help</string>
    
    <!--  Menu Home Screen -->    
    <string name="mOpcions">Options</string>
    <string name="mSortir">Exit</string>
    <string name="mTancarSessio">Logout</string>
    <string name="mDialogSortir">Are you sure you want to exit?</string>
    <string name="mDialogSi">Yes</string>
    <string name="mDialogNo">No</string>
    <string name="mDialogLogout">Are you sure you want to logout?</string>
    
    <!--  ImagesList Screen -->  
    <string name="selectImage">Select an image: </string>
    
    <!--  SensorList Screen -->  
	<string name="IdSensor">Id</string>
	<string name="NomSensor">Sensor</string>
	<string name="Chanel">Chanel</string>
	<string name="TipusSensor">Type</string>
	
	<!--  SensorInfo Screen -->  
	<string name="snNom">Nom: </string>
	<string name="snPoblacio">Població: </string>
	<string name="snDescripcio">Descripció: </string>
	<string name="snSerialNumber">Número de sèrie: </string>
	<string name="snSensor">Sensor: </string>
	<string name="snSensorName">Nom del sensor: </string>
	<string name="snMeasure">Valor: </string>
	<string name="snMaxLoad">Valor màxim: </string>
	<string name="snSensivity">Sensibilitat: </string>
	<string name="snOffSet">OffSet: </string>
	<string name="snAlarmAt">Alarma a: </string>
	<string name="snLastTare">Última tara: </string>	
	<string name="snBtn">Gràfic </string>
	
	<!-- Maps List Net -->
	<string name="netList">Net List</string>

</resources>
